Fix minor alignment issue with indicator icons

--- a/src/scss/_event-calendar.scss
+++ b/src/scss/_event-calendar.scss
@@ -111,8 +111,8 @@ $font-family-monospace: 'Courier New', 'Andale Mono', 'Consolas', monospace !def
             display: block;
             font-family: 'FontAwesome';
             font-weight: normal;
-            height: 16px;
-            line-height: 18px;
+            height: 17px;
+            line-height: 17px;
             position: absolute;
             right: 0;
             text-align: center;
